# rusty-vocabulary

./: Cargo.toml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: api.rs  config.rs  gui_errors.rs  main.rs
client/src/activitys/: add.rs  login.rs  main_menu.rs  mod.rs  settings.rs
models/: Cargo.toml
models/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/resource/: add.rs  card.rs  info.rs  login.rs  mod.rs  status.rs
src/: config.rs  gui_errors.rs  main.rs
