[package]
workspace = ".."
name = "rusty-vocabulary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
attohttpc = { version = "0.18.0", features = ["json"] }
directories = "4.0"
iced = { version = "0.3", features = ["glow", "glow_default_system_font"], default-features = false }
native-dialog = "0.6"
once_cell = "1.9"
rusty-vocabulary-models = { path = "../models" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
