[package]
workspace = ".."
name = "rusty-vocabulary-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
gotham_restful = "0.6"
log = "0.4"
rusty-vocabulary-models = { path = "../models" }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "1.16.0"
